Update to new Kodi add-on system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,10 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR})
 
 enable_language(CXX)
 
+set(USE_KODI_API_LEVEL 2)
+
 find_package(Kodi REQUIRED)
-find_package(Dumb)
+find_package(Dumb REQUIRED)
 
 if(NOT DUMB_FOUND)
   add_subdirectory(lib/dumb/cmake)
@@ -19,7 +21,8 @@ include_directories(${KODI_INCLUDE_DIR}
 
 set(DUMB_SOURCES src/DumbCodec.cpp)
 
-set(DEPLIBS ${DUMB_LIBRARIES})
+set(DEPLIBS ${kodi-addon-sharedlibrary_LIBRARIES}
+            ${DUMB_LIBRARIES})
 
 build_addon(audiodecoder.dumb DUMB DEPLIBS)
 
