--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -5,15 +5,15 @@ on: pull_request
 jobs:
   my-job:
     name: My Job
-    runs-on: windows-2016
-    env:
-      MY_VAR: Hi there! My name is
-      FIRST_NAME: Mona
-      MIDDLE_NAME: The
-      LAST_NAME: Octocat
+    runs-on: windows-latest
 
     steps:
     - name: Create addon
+      env:
+        MY_VAR: Hi there! My name is
+        FIRST_NAME: Mona
+        MIDDLE_NAME: The
+        LAST_NAME: Octocat
       run: |
         echo ----------------
         echo $MY_VAR
